test/testdata/variables/self_referential_definition_error_global.lox
var a = a; // error: a has been used before its declaration
print a;
